--- a/package.json
+++ b/package.json
@@ -12,9 +12,18 @@
   "dependencies": {
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/firestore": "^18.5.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.15",
+    "@react-navigation/stack": "^6.3.19",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@rneui/base": "^0.0.0-edge.2",
+    "@rneui/themed": "^0.0.0-edge.2",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-vector-icons": "^10.0.0"
+    "react-native-safe-area-context": "^4.7.3",
+    "react-native-screens": "^3.26.0",
+    "react-native-vector-icons": "^10.0.0",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
