--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: "com.android.application"
 apply plugin: "com.facebook.react"
+apply plugin: "com.google.gms.google-services"
+apply from: file("../../node_modules/react-native-vector-icons/fonts.gradle")
 
 /**
  * This is the configuration block to customize your React Native Android app.
@@ -70,14 +72,16 @@ def jscFlavor = 'org.webkit:android-jsc:+'
 
 android {
     ndkVersion rootProject.ext.ndkVersion
-
     compileSdkVersion rootProject.ext.compileSdkVersion
-
+    // compileSdkVersion 34
+    // buildToolsVersion "34.0.5"
     namespace "com.todoappios"
     defaultConfig {
         applicationId "com.todoappios"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
+        // minSdkVersion 21
+        // targetSdkVersion 34
         versionCode 1
         versionName "1.0"
     }
@@ -104,6 +108,8 @@ android {
 }
 
 dependencies {
+    // Import the Firebase BoM
+     implementation(platform("com.google.firebase:firebase-bom:32.4.1"))
     // The version of react-native is set by the React Native Gradle Plugin
     implementation("com.facebook.react:react-android")
 
