--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-native-vision-camera": "^3.6.4",
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
